código refactorizado